Fix warning for invalid category and changing name to SoftwareSerialIn in the properties file

--- a/library.properties
+++ b/library.properties
@@ -1,8 +1,9 @@
-name=SoftwareSerial
+name=SoftwareSerialIn
 version=1.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
 sentence=Enables serial communication on digital pins. For all Arduino boards, BUT Arduino DUE.
+category=Communication
 paragraph=
 url=http://arduino.cc/en/Reference/SoftwareSerial
 architectures=avr
